# worth

./: .gitignore  AGENTS.md  README.md  bump.config.ts  bunfig.toml  eslint.config.mjs  nuxt.config.ts  package.json  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: deploy-releases-worker.yml  release.yml
app/: app.config.ts  app.vue  bindings.ts  error.vue  router.options.ts
app/assets/css/: main.css
app/components/: ConfirmDialog.vue  ErrorDetailsSurveyDialog.vue  FeedbackSurveyDialog.vue  StarRating.vue
app/components/Accounts/: AccountsTable.vue  AccountsTableViewOptions.vue  CreateDialog.vue  DeleteDialog.vue  SnapshotEditDialog.vue  SnapshotsAddDialog.vue  SnapshotsDeleteDialog.vue  Table.vue
app/components/Accounts/Snapshots/: AddDialog.vue  DeleteDialog.vue  EditDialog.vue
app/components/Accounts/Snapshots/Import/: Dialog.vue  ReviewStep.vue
app/components/Accounts/Snapshots/Import/Csv/: FileStep.vue  OptionsStep.vue
app/components/App/: KeyboardShortcutsDialog.vue  Navbar.vue  SearchBar.vue
app/components/Empty/: AppOnboarding.vue  AppOnboardingIllustration.vue  PageState.vue
app/components/Institutions/: CreateDialog.vue  DeleteDialog.vue
app/composables/: useAccountMutations.ts  useAccountSnapshotMutations.ts  useAccountsTableOptions.ts  useAnalytics.ts  useApi.ts  useAppLocale.ts  useAppUpdateRow.ts  useAppUpdates.ts  useConfirmDialog.ts  useCsvSnapshotImportFlow.ts  useErrorDetailsSurvey.ts  useFeedbackSurvey.ts  useInstitutionMutations.ts  useKeyboardShortcuts.ts  useLocaleFormatters.ts  usePreventRouteNavigation.ts  useResourcePageError.ts  useRouteParamInt.ts  useSettings.ts  useSnapshotsAddForm.ts
app/composables/forms/: useAccountUpsertForm.ts  useBackendValidationErrors.ts  useInstitutionUpsertForm.ts
app/middleware/: accountBreadcrumbContext.global.ts
app/modules/: tauri.ts
app/pages/: [...all].vue  index.vue  settings.vue
app/pages/accounts/: [id].vue  index.vue
app/pages/accounts/[id]/: index.vue  settings.vue
app/pages/institutions/: [id].vue  index.vue
app/pages/institutions/[id]/: index.vue  settings.vue
app/plugins/: app-lifecycle-analytics.client.ts  app-updates.client.ts  default-passive-events.client.ts  posthog.client.ts  settings.client.ts  vue-query.client.ts
app/scripts/: generate-zod.date.mjs  generate-zod.metadata.mjs  generate-zod.mjs  generate-zod.validation.mjs
app/utils/: account-type-meta.ts  currencies.ts  dates.ts  error-reporting.ts  i18n.ts  query.ts  snapshot-import-flows.ts  tauri-result.ts  ts.ts
app/utils/forms/: schemas.ts
docs/: releases.md  updates.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/crates/worth_macros/: Cargo.toml
src-tauri/crates/worth_macros/src/: lib.rs
src-tauri/db/migrations/: 0001_init.sql
src-tauri/db/seeds/: dev.sql
src-tauri/dev-bin/: db.rs  export_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs  state.rs  updates.rs
src-tauri/src/api/: mod.rs
src-tauri/src/contracts/: mod.rs  schema_export.rs
src-tauri/src/db/: mod.rs  rows.rs
src-tauri/src/imports/snapshots/: csv.rs  mod.rs
workers/releases/: .gitignore  Cargo.toml  README.md  wrangler.toml
workers/releases/src/: lib.rs
