[package]
name = "worth"
version = "0.0.1"
publish = false
description = "A balance tracking desktop app"
authors = [ "Callum Watkins <callum@callumwatkins.com>" ]
license = "AGPL-3.0-only"
edition = "2021"
default-run = "worth"

[lib]
name = "worth_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
chrono-tz = "0.10"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono"
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread"
] }
specta = { version = "=2.0.0-rc.22", features = [ "serde", "chrono" ] }
tauri-specta = { version = "=2.0.0-rc.21", features = [ "typescript" ] }
specta-typescript = "=0.0.9"
itertools = "0.14.0"
csv = "1.3"
schemars = { version = "1", features = [ "chrono04" ] }
garde = { version = "0.22", features = [ "derive", "regex" ] }
inventory = "0.3"
worth_macros = { path = "crates/worth_macros" }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"
