[package]
name = "worth"
version = "0.0.1"
publish = false
description = "A balance tracking desktop app"
authors = [ "Callum Watkins <callum@callumwatkins.com>" ]
license = "AGPL-3.0-only"
edition = "2021"
default-run = "worth"

[lib]
name = "worth_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri = { version = "~2.11", features = [] }
thiserror = { version = "2", default-features = false }
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
chrono-tz = "0.10"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono"
] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread"
] }
specta = { version = "=2.0.0-rc.25", features = [ "derive", "chrono" ] }
tauri-specta = { version = "=2.0.0-rc.25", features = [ "typescript" ] }
specta-typescript = "=0.0.12"
itertools = "0.14"
csv = "1"
schemars = { version = "1", features = [ "chrono04" ] }
garde = { version = "0.22", features = [ "derive", "regex" ] }
inventory = "0.3"
worth_macros = { path = "crates/worth_macros" }
tauri-plugin-opener = "=2.5.4"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "=2.4.2"
tauri-plugin-window-state = "=2.4.1"
