[package]
name = "worth-releases-worker"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
worker = "0.8"
worker-macros = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
